--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
         <version>2.1.6.RELEASE</version>
     </parent>
 
+    <packaging>jar</packaging>
+
     <groupId>com.example</groupId>
     <artifactId>springtraining</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -29,25 +31,15 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
-        <!--    <dependency>
-              <groupId>org.springframework</groupId>
-              <artifactId>spring-core</artifactId>
-              <version>5.1.9.RELEASE</version>
-            </dependency>-->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>5.1.8.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-            <version>2.1.8.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>2.0.2-beta</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
